--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ search: true
 repository: bharatkibhasha/bharatkibhasha.github.io
 teaser: "/assets/images/indian_languages.jpg"
 logo: "/assets/images/masthead.jpg"
+og_image: /assets/images/indian_languages.jpg
 
 # Build settings
 markdown: kramdown
@@ -31,7 +32,7 @@ remote_theme: mmistakes/minimal-mistakes
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
-timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: Asia/Kolkata # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 include:
   - _pages
@@ -104,3 +105,21 @@ category_archive:
 tag_archive:
   type: liquid
   path: /tags/
+  
+comments:
+  provider : "facebook"
+  facebook:
+    appid : 858159887944150
+    num_posts : # 5 (default)
+    colorscheme : # "light" (default), "dark"
+
+facebook:
+  appid : 858159887944150
+  username : "shubhamsharma0201"
+  
+analytics:
+  provider: "google-gtag"
+  google:
+    tracking_id: "UA-162477265-1"
+    anonymize_ip: false # default
+    
