--- a/_config.yml
+++ b/_config.yml
@@ -13,16 +13,16 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: "|| माध्यम ||"
-subtitle: मातृभाषाओं की ओर
+title: "|| भारत की भाषा ||"
+subtitle: भारत में मातृभाषाओं पर किस्से-कहानियाँ और बातें
 email: shubhamnov11sharma@gmail.com
 locale: hi-IN
-description: भारत की भाषाओं में हर तरह की पाठ्य सामग्री का संग्रह, एवं लेख इत्यादि
+description: भारत में मातृभाषाओं पर किस्से-कहानियाँ और बातें
 minimal_mistakes_skin: "sunrise" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum" "sunrise"
 search: true
 repository: bharatkibhasha/bharatkibhasha.github.io
 teaser: "/assets/images/indian_languages.jpg"
-logo: "/assets/images/indian_languages.jpg"
+logo: "/assets/images/masthead.jpg"
 og_image: /assets/images/indian_languages.jpg
 
 # Build settings
@@ -59,28 +59,25 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "भारती भाषा सेतु"
-  avatar : "/assets/images/masthead.jpg"
-  bio    : "निज भाषा उन्नति अहै, सब उन्नति को मूल"
+  name   : "शुभम् शर्मा"
+  avatar : "/assets/images/bio-photo.jpg"
+  bio    : "अंग्रेज़ी हटाओ"
   links:
-    - label: "हमारे बारे में"
+    - label: "भारती भाषा सेतु"
       icon: "fas fa-fw fa-link"
-      url: "https://bharatkibhasha.github.io/about/" 
-    - label: "निर्माता सदस्य"
-      icon: "fas fa-fw fa-link"
-      url: "https://bharatkibhasha.github.io/member"
-    - label: "सहयोग"
-      icon: "fas fa-fw fa-link"
-      url: "https://bharatkibhasha.github.io/contribute" 
+      url: "https://bharatkibhasha.github.io/" 
     - label: "ब्लॉगर पर देखें"
       icon: "fas fa-fw fa-link"
       url: "https://bharatkibhasha.blogspot.com/"
-    - label: "फेसबुक पर देखें"
+    - label: "फेसबुक"
       icon: "fab fa-facebook-square"
       url: "https://www.facebook.com/shubhamsharma0201"
 
 footer:
   links:
+    - label: "भारती भाषा सेतु"
+      icon: "fas fa-fw fa-link"
+      url: "https://bharatkibhasha.github.io/" 
     - label: "ब्लॉगर"
       icon: "fas fa-fw fa-link"
       url: "https://bharatkibhasha.blogspot.com/"
