--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,21 +1,9 @@
 main:
-  - title: "पुस्तकालय"
-    url: /library/
-  - title: "भाषाविषयक संसाधन"
-    url: /resources/
   - title: "लेख"
     url: /posts/
-  - title: "सीखें भारत की भाषाएँ"
-    url: /learn_indian_languages/
-  - title: "लिप्यंतरण"
-    url: /transliteration/
-  - title: "भाषांतरण"
-    url: /translation/
-  - title: "हमारे बारे में"
+  - title: "श्रेणियाँ"
+    url: /categories/
+  - title: "अंकितक"
+    url: /tags/
+  - title: "परिचय"
     url: /about/
-  - title: "सहयोग"
-    url: /contribute/
-  - title: "सुझाव दें"
-    url: /suggest/
-  - title: ""
-    url: //
