youtube channel + reminder

--- a/_config.yml
+++ b/_config.yml
@@ -64,10 +64,13 @@ author:
   bio    : "Go Back Simon"
   links:
     - label: "भारती भाषा सेतु"
-      icon: "fas fa-fw fa-link"
+      icon: "fas fa-link"
       url: "https://bharatkibhasha.github.io/" 
+    - label: "यूट्यूब"
+      icon: "fab fa-youtube"
+      url: "https://www.youtube.com/channel/UCQD0D_QtAS3-jEDPgikv8_w" 
     - label: "ब्लॉगर पर देखें"
-      icon: "fas fa-fw fa-link"
+      icon: "fas fa-link"
       url: "https://bharatkibhasha.blogspot.com/"
     - label: "फेसबुक"
       icon: "fab fa-facebook-square"
@@ -76,10 +79,13 @@ author:
 footer:
   links:
     - label: "भारती भाषा सेतु"
-      icon: "fas fa-fw fa-link"
+      icon: "fas fa-link"
       url: "https://bharatkibhasha.github.io/" 
+    - label: "यूट्यूब"
+      icon: "fab fa-youtube"
+      url: "https://www.youtube.com/channel/UCQD0D_QtAS3-jEDPgikv8_w"    
     - label: "ब्लॉगर"
-      icon: "fas fa-fw fa-link"
+      icon: "fas fa-link"
       url: "https://bharatkibhasha.blogspot.com/"
     - label: "फेसबुक"
       icon: "fab fa-facebook-square"
